www/css/themes/modern.css
/* ... */
.profile-box, .user-dropdown {
    color: #c8c8c8;
    background-color: rgba(28, 30, 34, 0.95);
    border: 1px solid #000000 !important;
    border-radius: 0px !important;
}

.profile-image {
    border-radius: 0px;
    border: solid 1px #000000 !important;
    margin-right: 5px;
    margin-bottom: 5px;
}

.poll-notify {
    color: #ff9900;
}

.chat-shadow {
    color: #777777;
}

#channelname {
    background-color: #282a2d !important;
}

.drink {
  border: 2px solid #0000cc;
}

#drinkcount {
  background-color: #000000;
  color: #ffffff;
}

#plmeta {
    border: 1px solid #000000;
    border-radius: 0 !important;
    background-color: rgba(20, 22, 26, 0.7);
    height: 25px;
    padding-left: 5px;
    padding-right: 5px;
}

#userlist, #messagebuffer {
  border-left: 1px solid #151515;
  border-right: 1px solid #151515;
}

#userlist {
    background-color: rgba(34, 38, 41, 0.52);
    overflow: auto;
    border-right: none !important;
}

#userlisttoggle {
    padding-top: 1px !important;
}


.userlist_item {
    margin-left: 5px;
    margin-top: 1px;
}

#messagebuffer {
    background-color: rgba(50, 54, 57, 0.52);
    overflow: auto;

}

#chatheader, #currenttitle {
    border: 1px solid #000000;
    height: 30px;
    background-color: rgba(20, 22, 26, 0.7);
    text-align: center;
    padding-top: 4px;
}

#chatheader .label {
    margin-left: 5px !important;
    margin-top: 2px;
    height: 65% !important;
    border-radius: 0px;
}

#modflair {
    margin-right: 5px;
}

.queue_entry {
    border-color: #000000;
    background-color: rgba(39,43,48,0.7);
}

#rightcontrols {
    margin-top: 4px;
}

#chatwrap, #videowrap {
    margin-bottom: 0px !important;
}

.form-control {
    border: 1px solid #000000 !important;
    background-color: rgba(20, 22, 26, 0.7)  !important;

}

.navbar-form .form-control {
    background-color: #282a2d !important;
}

#login {
    background-image: none !important;
    background-color: #282a2d !important;
    border: 1px solid black;
}

.input-group-addon {
    border: 1px solid #000000;
    border-right: none;
}

#newpollbtn {
    margin-top: 1px;
}

.navbar-inverse .navbar-text-nofloat {
    color: #c8c8c8;
}

#chatline, #guestname {
    background-color: rgba(20, 22, 26, 0.7) !important;
}

#motdwrap {
    margin-bottom: 9px;
    min-height: 20px;
    padding: 10px 19px !important;
}

